--- a/about.html
+++ b/about.html
@@ -34,9 +34,7 @@
                 nibh at felis. Donec sed arcu erat libero in ligula imperdiet convallis ut vel enim. Morbi non urna eu
                 diam ullamcorper luctus. Vivamus ac magna ex. Suspendisse pretium nibh non erat fringilla interdum.</p>
         </section>
-        <div class="minha_imagem2">
-            <img class="aprentacao__imagem" src="./assets/Imagem (1).png" alt="André Barbosa usando Terno">
-        </div>
+        <img class="apresentacao__imagem" src="./assets/Imagem (1).png" alt="André Barbosa usando Terno">
     </main>
 
     <footer class="rodape">
