--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
                     Linkedin</a>
             </div>
         </section>
-        <div class="minha_imagem">
-            <img src="./assets/Imagem.png" alt="Foto do André Barbosa recebendo um banho de sol">
-        </div>
+        <img class="apresentacao__imagem" src="./assets/Imagem.png"
+            alt="Foto do André Barbosa recebendo um banho de sol">
     </main>
 
     <footer class="rodape">
