--- a/about.html
+++ b/about.html
@@ -14,25 +14,27 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="curriculum.html">Currículo</a>
         </nav>
     </header>
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                fermentum, ipsum eu maximus malesuada, sem nisl condimentum mi, a venenatis diam felis nec tellus.
-                Maecenas condimentum mauris quis dui sollicitudin, quis dignissim ante interdum. Nullam nec tortor ut
-                quam maximus lacinia. Maecenas faucibus fringilla viverra. Nam congue, felis quis rhoncus volutpat,
-                purus odio varius risus, vel dignissim ligula risus suscipit metus. Aenean quis justo ut massa placerat
-                vulputate. Praesent et sem et nibh commodo porttitor ut eget ligula. Phasellus at varius lectus.</p>
-            <p class="apresentacao__conteudo__texto">Donec posuere metus et tortor ultricies, ut mollis augue rhoncus.
-                Mauris vitae mi ac tortor pharetra rhoncus et at massa. Aenean at iaculis diam. Donec id sapien sed odio
-                gravida sodales. Morbi diam mauris, aliquam nec nibh vitae, ullamcorper feugiat Duis malesuada tempor
-                sapien, non malesuada mi mattis sit amet. Suspendisse iaculis metus vel est consectetur, vitae feugiat
-                lacus mollis. In dapibus, risus vitae malesuada gravida, tortor velitfinibus turpis, ac molestie dui
-                nibh at felis. Donec sed arcu erat libero in ligula imperdiet convallis ut vel enim. Morbi non urna eu
-                diam ullamcorper luctus. Vivamus ac magna ex. Suspendisse pretium nibh non erat fringilla interdum.</p>
+            <p class="apresentacao__conteudo__texto"> Olá, tudo bem? Irei contar um pouco sobre mim. Meu nome é André
+                Barbosa, mas pode me chamar de André, eu tenho 18 anos de idade natural de São Paulo Capital -
+                SP e morando em Porto Alegre - RS desde os meus 9 anos de idade. Filho de mãe solo, eu tive que aprender
+                a ser independente muito cedo, mas isso de certa forma foi ótimo para eu desenvolver as minhas
+                competências, ter mais responsabilidade e aprender rápido. Sempre tive esse contato com a tecnologia,
+                desde pequeno gosto deste tipo de coisa, começou comigo querendo um "celular de tocar na tela", que fui
+                ter apenas pelos 10 anos de idade e sigo conquistando mais coisas. Antes de entrar na faculdade que
+                estou agora de Gestão Financeira, minha vontade era de estudar programação, tive a oportunidade com um
+                dos projetos do Instituto Caldeira - Nova Geração, oportunidade incrivel, quero aprender a programar e
+                no futuro trabalhar com tecnologia.</p>
+            <p class="apresentacao__conteudo__texto">Eu quero ficar muito bom na programação, quero aprender várias
+                linguas, por enquanto não sei o exato caminho que irei seguir, mas vamos começar com um JavaScript,
+                aprimorando meu HTML, CSS e após isso já quero aprender Phyton. Prazer! Espero que tenha gostado de me
+                conhecer um pouco 😉</p>
         </section>
         <img class="apresentacao__imagem" src="./assets/Imagem (1).png" alt="André Barbosa usando Terno">
     </main>
