--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="curriculum.html">Curriculo</a>
         </nav>
     </header>
 
@@ -38,8 +39,7 @@
                     Linkedin</a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/Imagem.png"
-            alt="Foto do André Barbosa recebendo um banho de sol">
+        <img class="apresentacao__imagem" src="./assets/imagem_home.png" alt="Selfie sorrindo do André Barbosa">
     </main>
 
     <footer class="rodape">
