--- a/curriculum.html
+++ b/curriculum.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
+    
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
             <a class="cabecalho__menu__link" href="curriculum.html">Currículo</a>
+            <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
         </nav>
     </header>
 
@@ -34,16 +36,35 @@
             <div class="apresentacao__conteudo__texto">
                 <ul class="apresentacao__conteudo__texto">
                     <h3>HTML e CSS</h3>
+
                     <li>HTML e CSS - ambientes de desenvolvimento,estrutura de arquivos e tags <a
                             class="apresentacao__conteudo__link__cursos"
-                            href="./documents/HTML e CSS - ambientes de desenvolvimento,estrutura de arquivos e tags.pdf">com
-                            certificado</a> </li>
+                            href="./documents/HTML e CSS - ambientes de desenvolvimento,estrutura de arquivos e tags.pdf">com certificado</a> </li>
+
                     <li>HTML e CSS - Classes, posicionamento e Flexbox <a class="apresentacao__conteudo__link__cursos"
-                            href="./documents/HTML e CSS - Classes, posicionamento e Flexbox.pdf">com certificado</a>
-                    </li>
+                            href="./documents/HTML e CSS - Classes, posicionamento e Flexbox.pdf">com certificado</a></li>
+
                     <li>Transmação Digital Tecnologias - Alura Cursos <a class="apresentacao__conteudo__link__cursos"
                             href="./documents/Transmação Digital Tecnologias.pdf">com certificado</a></li>
+
+                    <li>HTML e CSS - cabeçalho, footer e variáveis CSS <a class="apresentacao__conteudo__link__cursos" href="./documents/HTML e CSS_ cabeçalho, footer e variáveis CSS.pdf">com certificado</a></li>
+
+                    <li>HTML e CSS - trabalhando com responsividade e publicação de projeto<a class="apresentacao__conteudo__link__cursos" href="./documents/HTML e CSS_ trabalhando com responsividade e publicação de projetos.pdf">com certificado</a></li>
                 </ul>
+
+                <ul class="apresentacao__conteudo__texto">
+                    <h3>Java e JavaScript</h3>
+
+                    <li> Java Polimorfismo - entenda herança e interfaces <a class="apresentacao__conteudo__link__cursos" href="./documents/Java Polimorfismo_ entenda herança e interfaces - Alura.pdf">com certificado</a></li>
+
+                    <li> JavaScript e HTML <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript e HTML.pdf">com certificado</a></li>
+
+                    <li> JavaScript: Arrays <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript_ Arrays.pdf">com certificado</a></li>
+
+                    <li> JavaScript: Objetos <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript_ objetos.pdf">com certificado</a></li>
+
+                </ul>
+
             </div>
         </section>
         <img class="apresentacao__imagem" src="./assets/curriculum_image.png" alt="Uma selfie do André Barbosa">
