atualização do texto dos projetos

--- a/projetos.html
+++ b/projetos.html
@@ -28,7 +28,7 @@
         <div>
             <ul class="apresentacao__conteudo__texto">
 
-            <li> Movie Page: É um projeto que eu mesmo produzi, e ainda está em fase de desenvolvimento, a ideia é colocar os filmes que já assisti e adorei, fazer uma descrição breve do filme para que as outras pessoas que acessem possam usufruir dos fimes que eu gosto. <a class="apresentacao__conteudo__link__cursos" href="https://github.com/Tydre1/movie_page"></a>movie_page</li>
+            <li> Movie Page: É um projeto que eu mesmo produzi, utilizei HTML e CSS até o momento e ainda está em fase de desenvolvimento, a ideia é colocar os filmes que já assisti e adorei, fazer uma descrição breve do filme para que as outras pessoas que acessem possam usufruir dos fimes que eu gosto. <a class="apresentacao__conteudo__link__cursos" href="https://github.com/Tydre1/movie_page"></a>movie_page</li>
             <li> Mochila de Viagem: Projeto que produzi junto com os Cursos da Alura, utilizei HTML, CSS e JavaScript neste projeto. Quando você estiver planejando uma viagem e não pode esquecer certas coisas, você pode acessar esse site e colocar a quantidade de coisas que você precisa e a coisa que você precisa levar. Seja roupa, sapatos, acessórios, gadges. <a class="apresentacao__conteudo__link__cursos" href="https://github.com/Tydre1/mochila_de_viagem"></a>mochila_de_viagem</li>
 
             </ul>
