--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="curriculum.html">Curriculo</a>
+            <a class="cabecalho__menu__link" href="curriculum.html">Currículo</a>
+            <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
         </nav>
     </header>
 
