--- a/curriculum.html
+++ b/curriculum.html
@@ -39,29 +39,29 @@
 
                     <li>HTML e CSS - ambientes de desenvolvimento,estrutura de arquivos e tags <a
                             class="apresentacao__conteudo__link__cursos"
-                            href="./documents/HTML e CSS - ambientes de desenvolvimento,estrutura de arquivos e tags.pdf">com certificado</a> </li>
+                            href="./documents/HTML e CSS - ambientes de desenvolvimento,estrutura de arquivos e tags.pdf" target="_blank">com certificado</a> </li>
 
                     <li>HTML e CSS - Classes, posicionamento e Flexbox <a class="apresentacao__conteudo__link__cursos"
-                            href="./documents/HTML e CSS - Classes, posicionamento e Flexbox.pdf">com certificado</a></li>
+                            href="./documents/HTML e CSS - Classes, posicionamento e Flexbox.pdf" target="_blank">com certificado</a></li>
 
                     <li>Transmação Digital Tecnologias - Alura Cursos <a class="apresentacao__conteudo__link__cursos"
-                            href="./documents/Transmação Digital Tecnologias.pdf">com certificado</a></li>
+                            href="./documents/Transmação Digital Tecnologias.pdf" target="_blank">com certificado</a></li>
 
-                    <li>HTML e CSS - cabeçalho, footer e variáveis CSS <a class="apresentacao__conteudo__link__cursos" href="./documents/HTML e CSS_ cabeçalho, footer e variáveis CSS.pdf">com certificado</a></li>
+                    <li>HTML e CSS - cabeçalho, footer e variáveis CSS <a class="apresentacao__conteudo__link__cursos" href="./documents/HTML e CSS_ cabeçalho, footer e variáveis CSS.pdf" target="_blank">com certificado</a></li>
 
-                    <li>HTML e CSS - trabalhando com responsividade e publicação de projeto<a class="apresentacao__conteudo__link__cursos" href="./documents/HTML e CSS_ trabalhando com responsividade e publicação de projetos.pdf">com certificado</a></li>
+                    <li>HTML e CSS - trabalhando com responsividade e publicação de projeto<a class="apresentacao__conteudo__link__cursos" href="./documents/HTML e CSS_ trabalhando com responsividade e publicação de projetos.pdf" target="_blank">com certificado</a></li>
                 </ul>
 
                 <ul class="apresentacao__conteudo__texto">
                     <h3>Java e JavaScript</h3>
 
-                    <li> Java Polimorfismo - entenda herança e interfaces <a class="apresentacao__conteudo__link__cursos" href="./documents/Java Polimorfismo_ entenda herança e interfaces - Alura.pdf">com certificado</a></li>
+                    <li> Java Polimorfismo - entenda herança e interfaces <a class="apresentacao__conteudo__link__cursos" href="./documents/Java Polimorfismo_ entenda herança e interfaces - Alura.pdf" target="_blank">com certificado</a></li>
 
-                    <li> JavaScript e HTML <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript e HTML.pdf">com certificado</a></li>
+                    <li> JavaScript e HTML <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript e HTML.pdf" target="_blank">com certificado</a></li>
 
-                    <li> JavaScript: Arrays <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript_ Arrays.pdf">com certificado</a></li>
+                    <li> JavaScript: Arrays <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript_ Arrays.pdf" target="_blank">com certificado</a></li>
 
-                    <li> JavaScript: Objetos <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript_ objetos.pdf">com certificado</a></li>
+                    <li> JavaScript: Objetos <a class="apresentacao__conteudo__link__cursos" href="./documents/JavaScript_ objetos.pdf" target="_blank">com certificado</a></li>
 
                 </ul>
 
