--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong
+            <h1 class="apresentacao__conteudo__titulo" >Eleve seu negócio digital a outro nível <strong
                     class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou André Barbosa, desenvolvedor Front-end com especialidade
                 em JavaScript, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos
                 conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/andrehenrique135/">
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/andrehenrique135/" target="_blank">
                     <img src="./assets/instagram.png">
                     Instagram</a>
-                <a class="apresentacao__links__navegacao" href="https://github.com/Tydre1">
+                <a class="apresentacao__links__navegacao" href="https://github.com/Tydre1" target="_blank">
                     <img src="./assets/github.png">
                     GitHub</a>
                 <a class="apresentacao__links__navegacao"
-                    href="https://www.linkedin.com/in/andr%C3%A9-barbosa-949792252/">
+                    href="https://www.linkedin.com/in/andr%C3%A9-barbosa-949792252/" target="_blank">
                     <img src="./assets/linkedin.png">
                     Linkedin</a>
             </div>
