--- a/curriculum.html
+++ b/curriculum.html
@@ -23,7 +23,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Currículo</h1>
-            <p>
+            <p class="apresentacao__conteudo__texto">
                 Programador Front-End: HTML, CSS e JavaScript
             </p>
             <h2 class="apresentacao__conteudo__titulo">Experiências</h2>
@@ -51,7 +51,7 @@
                     <br>
                     <li>HTML e CSS - trabalhando com responsividade e publicação de projeto<a class="apresentacao__conteudo__link__cursos" href="./documents/HTML e CSS_ trabalhando com responsividade e publicação de projetos.pdf" target="_blank">com certificado</a></li>
                     <br>
-
+                    
                 </ul>
 
                 <ul class="apresentacao__conteudo__texto">
