atualizações no css para posicionar a imagem no topo

--- a/curriculum.html
+++ b/curriculum.html
@@ -35,6 +35,7 @@
             <h2 class="apresentacao__conteudo__titulo">Estudos</h2>
             <div class="apresentacao__conteudo__texto">
                 <ul class="apresentacao__conteudo__texto">
+
                     <h3>HTML e CSS</h3>
                     <br>
                     <li>HTML e CSS - ambientes de desenvolvimento,estrutura de arquivos e tags <a
@@ -70,7 +71,7 @@
 
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/curriculum_image.png" alt="Uma selfie do André Barbosa">
+        <img class="apresentacao__imagem__curriculo" src="./assets/curriculum_image.png" alt="Uma selfie do André Barbosa">
     </main>
 
     <footer class="rodape">
